--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -3,13 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ContactsFragment"
-    android:orientation="vertical">
+    tools:context=".contacts.ContactsFragment"
+    android:orientation="vertical"
+    android:id="@+id/contact_Layout">
 
 
-    <Button
-        android:id="@+id/notification_button"
-        android:layout_width="wrap_content"
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/contact_ListView"
+        />
+
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/contact_TextItem"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button"/>
+        android:clickable="true"/>
+
 </LinearLayout>
